--- a/estilos.css
+++ b/estilos.css
@@ -1,34 +1,34 @@
 *{
     text-decoration: none;
+    font-size: 16px;
 }
 
-h1{
-    color: green;
-}
 
-body{
+
+body, nav{
     display: flex;
 }
 
-h1{
+h3{
+    color: green;
     padding: 10px;
     margin: 10px;
 }
 
-#pag1 > a:nth-child(1) > h1{
+#pag1 > a:nth-child(1) > h3{
     border: solid;
-    border-radius: 25px;
+    border-radius: 20px;
     background-color: lightgreen;
 }
 
-#pag2 > a:nth-child(2) > h1{
+#pag2 > a:nth-child(2) > h3{
     border: solid;
-    border-radius: 25px;
+    border-radius: 20px;
     background-color: lightgreen;
 }
 
-#pag3 > a:nth-child(3) > h1{
+#pag3 > a:nth-child(3) > h3{
     border: solid;
-    border-radius: 25px;
+    border-radius: 20px;
     background-color: lightgreen;
 }
